--- a/config/forest_kernel.yaml
+++ b/config/forest_kernel.yaml
@@ -37,7 +37,9 @@ kernel_mode: "viab"
 obs_img_size: 3 # size in meters 
 side_img_size: [2, 1]
 n_phi: 41
-n_modes: 5
+# n_modes: 5
+nq_steer: 5
+nq_velocity: 3
 phi_range: 3.141
 dynamics_pts: 5
 discrim_block: 1 
