--- a/config/forest_kernel.yaml
+++ b/config/forest_kernel.yaml
@@ -8,7 +8,8 @@ l_r: 0.171
 l_f: 0.158
 force_f: 0.9
 
-max_v: 7
+max_v: 6
+min_v: 2 
 max_a: 8.5
 max_steer: 0.4
 max_d_dot: 3.2
@@ -38,7 +39,7 @@ obs_img_size: 3 # size in meters
 side_img_size: [2, 1]
 n_phi: 41
 # n_modes: 5
-nq_steer: 5
+nq_steer: 9
 nq_velocity: 5
 phi_range: 3.141
 dynamics_pts: 5
