--- a/config/forest_kernel.yaml
+++ b/config/forest_kernel.yaml
@@ -31,13 +31,13 @@ n_obs: 4
 obs_size: 0.5
 
 kernel_path: "Data/Kernels/"
-kernel_mode: "disc"
-# kernel_mode: "viab"
+# kernel_mode: "disc"
+kernel_mode: "viab"
 obs_img_size: 4 # size in meters 
 side_img_size: [2, 1]
 n_phi: 41
 # n_modes: 5
-nq_steer: 9
+nq_steer: 5
 nq_velocity: 3
 phi_range: 3.141
 dynamics_pts: 5
