--- a/config/forest_kernel.yaml
+++ b/config/forest_kernel.yaml
@@ -8,7 +8,7 @@ l_r: 0.171
 l_f: 0.158
 force_f: 0.9
 
-max_v: 3
+max_v: 4
 min_v: 2 
 max_a: 8.5
 max_steer: 0.4
@@ -20,7 +20,7 @@ max_steps: 5000
 
 # map info
 map_name: "forest2"
-n_dx: 80
+n_dx: 40
 forest_length: 25
 forest_width: 2
 start_pose: [1, 1, 0]
@@ -34,12 +34,12 @@ kernel_path: "Data/Kernels/"
 dynamics_path: "Data/Dynamics/"
 kernel_mode: "disc"
 # kernel_mode: "viab"
-obs_img_size: 4 # size in meters 
+obs_img_size: 3 # size in meters 
 side_img_size: [2, 1]
-n_phi: 81
+n_phi: 41
 # n_modes: 5
 nq_steer: 5
-nq_velocity: 2
+nq_velocity: 3
 phi_range: 3.141
 dynamics_pts: 5
 discrim_block: 1 
@@ -67,4 +67,5 @@ test_n: 100
 
 vehicle_path: "Data/Vehicles/"
 vehicle: reactive
+traj_path: "Data/Trajectories/"
 
